--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/spaghetti-aglio-olio.html" target="_blank" rel="noreferrer noopener">Spaghetti Aglio e Olio</a>
 </body>
 
 </html>
