feat: add content to spaghetti page

--- a/recipes/spaghetti-aglio-olio.html
+++ b/recipes/spaghetti-aglio-olio.html
@@ -8,6 +8,28 @@
 
 <body>
     <h1>Spaghetti Aglio e Olio</h1>
+    <img src="../img/spaghetti-aglio-olio.webp">
+    <h3>Description</h3>
+    <p>A classic Italian pasta dish featuring spaghetti lightly coated in olive oil, 
+        sautéed garlic slices, and a hint of chili flakes. Garnished with fresh parsley, 
+        this simple yet flavorful dish is perfect for a quick and satisfying meal.</p>
+    <h3>Ingredients</h3>
+    <p>For 1 person</p>
+    <ul>
+        <li>125g spaghetti</li>
+        <li>2 garlic gloves, crushed</li>
+        <li>olive oil (to taste)</li>
+        <li>salt (to taste)</li>
+        <li>chili flakes (to taste)</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Cook spaghetti in salted boiling water until al dente. Reserve 1/2 cup of pasta water.</li>
+        <li>In the meanwhile, heat olive oil in a pan, add garlic slices, and cook until golden.</li>
+        <li>Add chili flakes and stir for 30 seconds.</li>
+        <li>Toss the drained spaghetti in the pan, adding a splash of reserved pasta water to coat.</li>
+        <li>Garnish with Parmesan cheese to taste and serve hot.</li>
+    </ol>
 </body>
 
 </html>
