feat: add two more recipes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/spaghetti-aglio-olio.html" target="_blank" rel="noreferrer noopener">Spaghetti Aglio e Olio</a>
+    <ul>
+        <li><a href="./recipes/spaghetti-aglio-olio.html" target="_blank" rel="noreferrer noopener">Spaghetti Aglio e
+                Olio</a></li>
+        <li><a href="./recipes/hummus.html" target="_blank" rel="noreferrer noopener">Hummus</a></li>
+        <li><a href="./recipes/falafel.html" target="_blank" rel="noreferrer noopener">Falafel with Tahini Sauce</a>
+        </li>
+    </ul>
 </body>
 
 </html>
