feat: add hummus description

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -10,7 +10,9 @@
     <h1>Hummus</h1>
     <img src="../img/hummus.webp">
     <h3>Description</h3>
-    <p></p>
+    <p>A creamy and smooth Middle Eastern dip made from chickpeas, tahini, lemon juice, and garlic. Drizzled with olive
+        oil and sprinkled with paprika, it’s served with fresh pita bread and vegetable sticks for a delightful
+        appetizer.</p>
     <h3>Ingredients</h3>
     <p>For 2 people</p>
     <ul>
