fix: change target behavior and fix images

--- a/recipes/hummus.html
+++ b/recipes/hummus.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Hummus</h1>
-    <img src="../img/hummus.webp">
+    <img src="../img/hummus.webp" width="400" height="400">
     <h3>Description</h3>
     <p>A creamy and smooth Middle Eastern dip made from chickpeas, tahini, lemon juice, and garlic. Drizzled with olive
         oil and sprinkled with paprika, it’s served with fresh pita bread and vegetable sticks for a delightful
