--- a/recipes/spaghetti-aglio-olio.html
+++ b/recipes/spaghetti-aglio-olio.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Spaghetti Aglio e Olio</h1>
-    <img src="../img/spaghetti-aglio-olio.webp">
+    <img src="../img/spaghetti-aglio-olio.webp" width="400" height="400">
     <h3>Description</h3>
     <p>A classic Italian pasta dish featuring spaghetti lightly coated in olive oil, 
         sautéed garlic slices, and a hint of chili flakes. Garnished with fresh parsley, 
