--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/spaghetti-aglio-olio.html" target="_blank" rel="noreferrer noopener">Spaghetti Aglio e
+        <li><a href="./recipes/spaghetti-aglio-olio.html" rel="noreferrer noopener">Spaghetti Aglio e
                 Olio</a></li>
-        <li><a href="./recipes/hummus.html" target="_blank" rel="noreferrer noopener">Hummus</a></li>
-        <li><a href="./recipes/falafel.html" target="_blank" rel="noreferrer noopener">Falafel with Tahini Sauce</a>
+        <li><a href="./recipes/hummus.html" rel="noreferrer noopener">Hummus</a></li>
+        <li><a href="./recipes/falafel.html" rel="noreferrer noopener">Falafel with Tahini Sauce</a>
         </li>
     </ul>
 </body>
